--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
- DB_URL="postgres://postgres:0000@localhost:5432/kathya"
+ DB_URL="postgres://postgres:99261855@localhost:5432/postgres"
  PORT=5000
