--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
- DB_URL="postgres://postgres:99261855@localhost:5432/postgres"
+#  DB_URL="postgres://postgres:99261855@localhost:5432/postgres"
+DB_URL="postgres://postgres:fL39OvdMjA8cvZvfZ5wDhu0DvU8OSsBW@dpg-cthlln9opnds73a5gi60-a.oregon-postgres.render.com:5432/mypostgrestest_user"
  PORT=5000
+
+
