--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "nodemon src/index.ts",
-    "postinstall": "npm run build --prefix client"
+    "start": "nodemon src/index.ts"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
